--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
   "general": {
-    "seeds": [42, 2023, 7, 99, 1234]
+    "seeds": [42]
   },
 
   "model": {
     "batch_size": 64,
-    "epochs": 200,
+    "epochs": 20,
     "learning_rate": 0.001,
     "patience": 10
   },
@@ -28,9 +28,8 @@
     "window": 8,
     "take_profit_pips": 20,
     "max_dd_pips": 7,
-    "sequence_length": 30,
-    "output_dataset_path": "../dataset/eurusd_1h.csv",
-    "output_X_path": "../dataset/X_lstm.npy",
-    "output_y_path": "../dataset/y_lstm.npy"
+    "sequence_length": 20,
+    "output_dataset_path": "exogenous_model\\dataset\\features_and_target\\features_and_target.csv",
+    "output_Xy_npz_path": "exogenous_model\\dataset\\features_and_target\\sequential_dataset.npz"
   }
 }
