--- a/config.json
+++ b/config.json
@@ -1,13 +1,14 @@
 {
   "general": {
-    "seeds": [42]
+    "seeds": [42,2043]
   },
 
   "model": {
     "batch_size": 64,
-    "epochs": 20,
+    "epochs": 100,
     "learning_rate": 0.001,
-    "patience": 10
+    "patience": 10,
+    "sequence_length": 200
   },
 
   "meta_model": {
@@ -17,27 +18,10 @@
     "patience": 10
   },
 
-  "features": {
-    "use_sma": true,
-    "use_ema": true,
-    "use_rsi": true,
-    "use_macd": true,
-    "use_bollinger": true,
-    "use_atr": true,
-    "use_adx": true,
-    "use_cci": true,
-    "use_williams_r": true,
-    "use_roc": true,
-    "use_kama": true,
-    "use_vwap": true,
-    "use_pvt": true
-  },
-
   "dataset": {
     "window": 8,
     "take_profit_pips": 20,
     "max_dd_pips": 7,
-    "sequence_length": 200,
     "output_dataset_path": "exogenous_model\\dataset\\features_and_target\\features_and_target.csv",
     "output_Xy_npz_path": "exogenous_model\\dataset\\features_and_target\\sequential_dataset.npz"
   }
