--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "general": {
-    "seeds": [42,2043]
+    "seeds": [42]
   },
 
   "model": {
@@ -19,9 +19,9 @@
   },
 
   "dataset": {
-    "window": 8,
+    "window": 24,
     "take_profit_pips": 20,
-    "max_dd_pips": 7,
+    "stop_loss_pips": 7,
     "output_dataset_path": "exogenous_model\\dataset\\features_and_target\\features_and_target.csv",
     "output_Xy_npz_path": "exogenous_model\\dataset\\features_and_target\\sequential_dataset.npz"
   }
