--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numpy>=2.2.6",
     "pandas-datareader>=0.10.0",
     "scikit-learn>=1.7.0",
+    "statsmodels>=0.14.4",
     "ta>=0.11.0",
     "torch>=2.7.1",
     "xgboost>=3.0.2",
